--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],          // 예: "@/firebase" → "./firebase.ts"
-      "@/app/*": ["app/*"]   // 예: "@/app/main/page" → "./app/main/page"
+      "@/app/*": ["app/*"],
+      "@lib/*": ["./app/lib/*"]         // lib 전용 별칭
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
